# orbit

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  camera_out.txt  debug_camera.py  graph.dot  install
.cmake/api/v1/reply/: cache-v2-5a18eb9f6eafd5f9ca5d.json  cache-v2-60fc4f2e39196312e79a.json  cache-v2-8557f6af6430841f0b8b.json  cache-v2-b7ff4b515ca30bba78ef.json  cache-v2-fe15280c01b16c4498a7.json  cmakeFiles-v1-16f8fd2a7b8b97585ae6.json  cmakeFiles-v1-4e83e65d955d7b656e07.json  cmakeFiles-v1-9971a02f07e24a9313a1.json  codemodel-v2-18adfddb37c7761eb1d4.json  codemodel-v2-5f068d6a30e860a64bfc.json  codemodel-v2-678ace41e084a5488263.json  codemodel-v2-7fa5632474d22507a3fc.json  codemodel-v2-82ff23da9692e5b23fd5.json  codemodel-v2-ca1ebb1b3dae1238a7ba.json  codemodel-v2-cd3d4b588e4c070ef4a5.json  codemodel-v2-ef7f393923e0cc0c4712.json  directory-.-26745c4cec845961aaa9.json  directory-.-97ff2cf6fe7bd79e9604.json  directory-.-Build-a897c3a4d4df826f4169.json  directory-.-Build-bd11db7133ad0662a113.json  directory-.-f01910eedb5e07101c61.json  directory-src-48c50416cc8af8d40c35.json  index-2023-11-03T01-34-01-0337.json  index-2023-11-03T21-09-14-0682.json  index-2023-11-04T05-11-21-0377.json  index-2023-11-04T23-04-10-0218.json  (+104 more)
.github/workflows/: makefile.yml
Testing/Temporary/: CTestCostData.txt
assets/: spaceship.dae
docs/: CMakeLists.txt  CTestTestfile.cmake  Doxyfile.in  Doxyfile.in.bak  Makefile  main.dox
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile.tmp1a56c  gravity  gravity.cpp  main_qtgl_palette.cpp  main_window  main_window.cpp  paletteGL  paletteGL.cpp  perlin  perlin.cpp  qt_ui_example.ui  qtwindow  qtwindow.cpp
examples/gravity_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
examples/gravity_autogen/5NKEQIJMX7/: moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d
glm/test/bug/: test-bug_ms_vec_static
glm/test/core/: test-core_cpp_constexpr  test-core_cpp_defaulted_ctor  test-core_force_aligned_gentypes  test-core_force_arch_unknown  test-core_force_compiler_unknown  test-core_force_ctor_init  test-core_force_cxx03  test-core_force_cxx98  test-core_force_cxx_unknown  test-core_force_explicit_ctor  test-core_force_inline  test-core_force_platform_unknown  test-core_force_pure  test-core_force_quat_wxyz  test-core_force_unrestricted_gentype  test-core_force_xyzw_only  test-core_func_common  test-core_func_exponential  test-core_func_geometric  test-core_func_integer  test-core_func_integer_bit_count  test-core_func_integer_find_lsb  test-core_func_integer_find_msb  test-core_func_matrix  test-core_func_noise  test-core_func_packing  test-core_func_swizzle  test-core_func_trigonometric  test-core_func_vector_relational  test-core_setup_force_cxx98  test-core_setup_force_size_t_length  test-core_setup_message  test-core_setup_platform_unknown  test-core_setup_precision  test-core_type_aligned  test-core_type_cast  test-core_type_ctor  test-core_type_int  test-core_type_length  test-core_type_mat2x2  (+12 more)
glm/test/ext/: test-ext_matrix_common  test-ext_matrix_int2x2_sized  test-ext_matrix_int2x3_sized  test-ext_matrix_int2x4_sized  test-ext_matrix_int3x2_sized  test-ext_matrix_int3x3_sized  test-ext_matrix_int3x4_sized  test-ext_matrix_int4x2_sized  test-ext_matrix_int4x3_sized  test-ext_matrix_int4x4_sized  test-ext_matrix_relational  test-ext_matrix_transform  test-ext_matrix_uint2x2_sized  test-ext_matrix_uint2x3_sized  test-ext_matrix_uint2x4_sized  test-ext_matrix_uint3x2_sized  test-ext_matrix_uint3x3_sized  test-ext_matrix_uint3x4_sized  test-ext_matrix_uint4x2_sized  test-ext_matrix_uint4x3_sized  test-ext_matrix_uint4x4_sized  test-ext_quaternion_common  test-ext_quaternion_exponential  test-ext_quaternion_geometric  test-ext_quaternion_relational  test-ext_quaternion_transform  test-ext_quaternion_trigonometric  test-ext_quaternion_type  test-ext_scalar_common  test-ext_scalar_constants  test-ext_scalar_int_sized  test-ext_scalar_integer  test-ext_scalar_relational  test-ext_scalar_uint_sized  test-ext_scalar_ulp  test-ext_vec1  test-ext_vector_bool1  test-ext_vector_common  test-ext_vector_iec559  test-ext_vector_int1_sized  (+11 more)
glm/test/gtc/: test-gtc_bitfield  test-gtc_color_space  test-gtc_constants  test-gtc_epsilon  test-gtc_integer  test-gtc_matrix_access  test-gtc_matrix_integer  test-gtc_matrix_inverse  test-gtc_matrix_transform  test-gtc_noise  test-gtc_packing  test-gtc_quaternion  test-gtc_random  test-gtc_reciprocal  test-gtc_round  test-gtc_type_aligned  test-gtc_type_precision  test-gtc_type_ptr  test-gtc_ulp  test-gtc_vec1
glm/test/gtx/: test-gtx  test-gtx_associated_min_max  test-gtx_closest_point  test-gtx_color_encoding  test-gtx_color_space  test-gtx_color_space_YCoCg  test-gtx_common  test-gtx_compatibility  test-gtx_component_wise  test-gtx_dual_quaternion  test-gtx_easing  test-gtx_euler_angle  test-gtx_extend  test-gtx_extended_min_max  test-gtx_exterior_product  test-gtx_fast_exponential  test-gtx_fast_square_root  test-gtx_fast_trigonometry  test-gtx_functions  test-gtx_gradient_paint  test-gtx_handed_coordinate_space  test-gtx_integer  test-gtx_intersect  test-gtx_io  test-gtx_load  test-gtx_log_base  test-gtx_matrix_cross_product  test-gtx_matrix_decompose  test-gtx_matrix_factorisation  test-gtx_matrix_interpolation  test-gtx_matrix_major_storage  test-gtx_matrix_operation  test-gtx_matrix_query  test-gtx_matrix_transform_2d  test-gtx_norm  test-gtx_normal  test-gtx_normalize_dot  test-gtx_number_precision  test-gtx_optimum_pow  test-gtx_orthonormalize  (+18 more)
glm/test/perf/: test-perf_matrix_div  test-perf_matrix_inverse  test-perf_matrix_mul  test-perf_matrix_mul_vector  test-perf_matrix_transpose  test-perf_vector_mul_matrix
include/: paletteGL.h  qtwindow.h  ui_paletteGL.h
include/glad/: glad.h
include/glm/: CTestTestfile.cmake
shaders/: lightShader.fs  palette.fs  shader.fs  shader.vs
src/: CMakeLists.txt  CTestTestfile.cmake  glad.c  init.c  platform.c
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_glm  test_glm.cpp  test_input  test_input.cpp
